# SplunkAgenticOps

./: .env.example  .gitignore  LICENSE  README.md  architecture_diagram.md  main.py  project_description.md  pyproject.toml  resources.md  verify_opspilot.py
agents/: anomaly_agent.py  approval.py  classification_agent.py  executive_summary_agent.py  graph.py  memory_agent.py  models.py  nodes.py  planner_agent.py  registry.py  remediation_agent.py  state.py  timeline_agent.py
agents/domain/: application_agent.py  database_agent.py  infrastructure_agent.py  kubernetes_agent.py  network_agent.py  security_agent.py
api/: __init__.py  main.py  mcp_client.py  websocket_manager.py
config/: active_profile.json  capabilities.json  environment.py
config/profiles/: banking.json  ecommerce.json  generic.json  healthcare.json  kubernetes.json  saas.json
frontend/: package-lock.json
frontend/src/: App.css  App.jsx
generator/: log_generator.py
memory/: incident_store.py  incidents.json
reports/: timeline.json
runbooks/: __init__.py  database_errors.md  runbook_db.py
runbooks/categories/application/: payment_errors.md
runbooks/categories/cache/: redis_errors.md
runbooks/categories/deployment/: placeholder.md
runbooks/categories/infrastructure/: placeholder.md
runbooks/categories/networking/: placeholder.md
runbooks/categories/security/: placeholder.md
